--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -42,8 +42,8 @@
     height: 25vh;
     transform: translate3d(100%, 0, 0);
 
-    .portrait {
-      background: url('../img/portrait_small.jpg');
+    .avatar {
+      background: url("../img/avatar_small.png");
       width: 150px;
       height: 150px;
     }
@@ -51,11 +51,11 @@
 
   .about-info {
     grid-template-areas:
-      'bioimage'
-      'bio'
-      'section1'
-      'section2'
-      'section3';
+      "bioimage"
+      "bio"
+      "section1"
+      "section2"
+      "section3";
 
     grid-template-columns: 1fr;
   }
