--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,5 @@
-@import 'config';
-@import 'menu';
+@import "config";
+@import "menu";
 
 * {
   box-sizing: border-box;
@@ -11,7 +11,7 @@ body {
   color: set-text-color($primary-color);
   height: 100%;
   margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
 }
 
@@ -59,7 +59,7 @@ main {
       @include easeOut;
 
       &:hover {
-        color: $secondary-color;
+        color: $hover-color;
       }
     }
   }
@@ -76,8 +76,8 @@ main {
   display: grid;
   grid-gap: 30px;
   grid-template-areas:
-    'bioimage bio bio'
-    'section1 section2 section3';
+    "bioimage bio bio"
+    "section1 section2 section3";
   grid-template-columns: repeat(3, 1fr);
 
   .bio-image {
@@ -122,7 +122,7 @@ main {
 
     &:hover {
       opacity: 0.5;
-      border-color: $secondary-color;
+      border-color: $hover-color;
       @include easeOut;
     }
   }
@@ -145,9 +145,9 @@ main {
     &:hover {
       padding: 0.5rem 1.5rem;
       background: $secondary-color;
-      color: set-text-color($secondary-color);
+      color: set-text-color($hover-color);
       span {
-        color: set-text-color($secondary-color);
+        color: set-text-color($hover-color);
       }
     }
   }
@@ -159,8 +159,8 @@ main {
   border: 0;
   margin-bottom: 0.3rem;
   &:hover {
-    background: $secondary-color;
-    color: set-text-color($secondary-color);
+    background: $hover-color;
+    color: set-text-color($hover-color);
   }
 }
 
@@ -184,4 +184,4 @@ main {
   height: 60px;
 }
 
-@import 'mobile';
+@import "mobile";
