--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,14 +94,17 @@ main {
 
   .section-1 {
     grid-area: section1;
+    height: auto;
   }
 
   .section-2 {
     grid-area: section2;
+    height: auto;
   }
 
   .section-3 {
     grid-area: section3;
+    height: 50%;
   }
 
   .section {
