💄 hopefully fixed spotify widget

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -94,23 +94,21 @@ main {
 
   .section-1 {
     grid-area: section1;
-    height: auto;
   }
 
   .section-2 {
     grid-area: section2;
-    height: auto;
   }
 
   .section-3 {
     grid-area: section3;
-    height: 50%;
   }
 
   .section {
     background: lighten($primary-color, 5);
     padding: 0.5rem;
     border-bottom: $secondary-color 5px solid;
+    margin: auto;
   }
 }
 
