--- a/css/main.css
+++ b/css/main.css
@@ -6,7 +6,6 @@
   cursor: pointer;
   transition: all 0.5s ease-out;
 }
-
 .menu-btn .btn-line {
   width: 28px;
   height: 3px;
@@ -14,19 +13,15 @@
   background: #fff;
   transition: all 0.5s ease-out;
 }
-
 .menu-btn.close {
   transform: rotate(180deg);
 }
-
 .menu-btn.close .btn-line:nth-child(1) {
   transform: rotate(45deg) translate(5px, 5px);
 }
-
 .menu-btn.close .btn-line:nth-child(2) {
   opacity: 0;
 }
-
 .menu-btn.close .btn-line:nth-child(3) {
   transform: rotate(-45deg) translate(7px, -6px);
 }
@@ -38,13 +33,10 @@
   opacity: 0.9;
   visibility: hidden;
 }
-
 .menu.show {
   visibility: visible;
 }
-
-.menu-branding,
-.menu-nav {
+.menu-branding, .menu-nav {
   display: flex;
   flex-flow: column wrap;
   align-items: center;
@@ -54,7 +46,6 @@
   height: 100vh;
   overflow: hidden;
 }
-
 .menu-nav {
   margin: 0;
   padding: 0;
@@ -63,21 +54,17 @@
   transform: translate3d(0, -100%, 0);
   transition: all 0.5s ease-out;
 }
-
 .menu-nav.show {
   transform: translate3d(0, 0, 0);
 }
-
 .menu-branding {
   background: #444;
   transform: translate3d(0, 100%, 0);
   transition: all 0.5s ease-out;
 }
-
 .menu-branding.show {
   transform: translate3d(0, 0, 0);
 }
-
 .menu-branding .avatar {
   width: 250px;
   height: 250px;
@@ -85,20 +72,16 @@
   border-radius: 50%;
   border: solid 3px #1e81b0;
 }
-
 .menu .nav-item {
   transform: translate3d(600px, 0, 0);
   transition: all 0.5s ease-out;
 }
-
 .menu .nav-item.show {
   transform: translate3d(0, 0, 0);
 }
-
-.menu .nav-item.current>a {
+.menu .nav-item.current > a {
   color: #1e81b0;
 }
-
 .menu .nav-link {
   display: inline-block;
   position: relative;
@@ -110,7 +93,6 @@
   text-decoration: none;
   transition: all 0.5s ease-out;
 }
-
 .menu .nav-link:hover {
   color: #9c34b0;
   transform: scale(1.25);
@@ -144,13 +126,11 @@ body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.5;
 }
-
 body#bg-img {
   background: url(../img/background.png);
   background-attachment: fixed;
   background-size: cover;
 }
-
 body#bg-img:after {
   content: "";
   position: absolute;
@@ -167,13 +147,11 @@ h3 {
   margin: 0;
   font-weight: 400;
 }
-
 h1.lg-heading,
 h2.lg-heading,
 h3.lg-heading {
   font-size: 6rem;
 }
-
 h1.sm-heading,
 h2.sm-heading,
 h3.sm-heading {
@@ -201,24 +179,19 @@ main {
   padding: 4rem;
   min-height: calc(100vh - 60px);
 }
-
 main .icons {
   margin-top: 1rem;
 }
-
 main .icons a {
   padding: 0.4rem;
   transition: all 0.5s ease-out;
 }
-
 main .icons a:hover {
   color: #9c34b0;
 }
-
 main#home {
   overflow: hidden;
 }
-
 main#home h1 {
   margin-top: 20vh;
 }
@@ -226,41 +199,33 @@ main#home h1 {
 .about-info {
   display: grid;
   grid-gap: 30px;
-  grid-template-areas: "bioimage bio bio""section1 section2 section3";
+  grid-template-areas: "bioimage bio bio" "section1 section2 section3";
   grid-template-columns: repeat(3, 1fr);
 }
-
 .about-info .bio-image {
   grid-area: bioimage;
   margin: auto;
   border-radius: 50%;
   border: #1e81b0 3px solid;
 }
-
 .about-info .bio {
   grid-area: bio;
   font-size: 1.5rem;
 }
-
 .about-info .section-1 {
   grid-area: section1;
-  height: auto;
 }
-
 .about-info .section-2 {
   grid-area: section2;
-  height: auto;
 }
-
 .about-info .section-3 {
   grid-area: section3;
-  height: 50%;
 }
-
 .about-info .section {
   background: #515151;
   padding: 0.5rem;
   border-bottom: #1e81b0 5px solid;
+  margin: auto;
 }
 
 .socials {
@@ -268,12 +233,10 @@ main#home h1 {
   grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
 }
-
 .socials img {
   width: 100%;
   border: 3px #fff solid;
 }
-
 .socials img:hover {
   opacity: 0.5;
   border-color: #9c34b0;
@@ -287,7 +250,6 @@ main#home h1 {
   align-items: center;
   margin-top: 1rem;
 }
-
 .boxes div {
   font-size: 2rem;
   border: 3px #fff solid;
@@ -295,29 +257,22 @@ main#home h1 {
   margin-bottom: 3rem;
   transition: all 0.5s ease-out;
 }
-
 .boxes div:hover {
   padding: 0.5rem 1.5rem;
   background: #1e81b0;
   color: #000;
 }
-
 .boxes div:hover span {
   color: #000;
 }
 
-.btn,
-.btn-light,
-.btn-dark {
+.btn, .btn-light, .btn-dark {
   display: block;
   padding: 0.5rem 1rem;
   border: 0;
   margin-bottom: 0.3rem;
 }
-
-.btn:hover,
-.btn-light:hover,
-.btn-dark:hover {
+.btn:hover, .btn-light:hover, .btn-dark:hover {
   background: #9c34b0;
   color: #000;
 }
@@ -345,33 +300,29 @@ main#home h1 {
     grid-template-columns: repeat(4, 1fr);
   }
 }
-
 @media screen and (min-width: 769px) and (max-width: 1170px) {
   .socials {
     grid-template-columns: repeat(3, 1fr);
   }
 }
-
 @media screen and (max-width: 768px) {
   main {
     align-items: center;
     text-align: center;
   }
-
   main .lg-heading {
     line-height: 1;
     margin-bottom: 1rem;
   }
 
   ul.menu-nav,
-  div.menu-branding {
+div.menu-branding {
     float: none;
     width: 100%;
     min-height: 0;
   }
-
   ul.menu-nav.show,
-  div.menu-branding.show {
+div.menu-branding.show {
     transform: translate3d(0, 0, 0);
   }
 
@@ -385,7 +336,6 @@ main#home h1 {
     height: 25vh;
     transform: translate3d(100%, 0, 0);
   }
-
   .menu-branding .avatar {
     background: url("../img/avatar_small.png");
     width: 150px;
@@ -393,10 +343,9 @@ main#home h1 {
   }
 
   .about-info {
-    grid-template-areas: "bioimage""bio""section1""section2""section3";
+    grid-template-areas: "bioimage" "bio" "section1" "section2" "section3";
     grid-template-columns: 1fr;
   }
-
   .about-info .section-3 {
     height: auto;
   }
@@ -405,16 +354,13 @@ main#home h1 {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-
 @media screen and (max-width: 500px) {
   main {
     padding: 2rem;
   }
-
   main #home h1 {
     margin-top: 10vh;
   }
-
   main .lg-heading {
     margin-top: 1rem;
     font-size: 5rem;
@@ -423,6 +369,4 @@ main#home h1 {
   .socials {
     grid-template-columns: 1fr;
   }
-}
-
-/*# sourceMappingURL=main.css.map */
+}/*# sourceMappingURL=main.css.map */
